# Lab2

./: CMakeLists.txt  main.cpp
ForTask2/: SetCommands.cpp  SetCommands.h  helpFuncs.cpp  helpFuncs.h
Structures/: ComplTree.cpp  ComplTree.h  MyQueue.cpp  MyQueue.h  Node.h  Pair.h  Set.cpp  Set.h  Stack.cpp  Stack.h  arr.cpp  arr.h  hashMap.cpp  hashMap.h  list.cpp  list.h  singleList.cpp  singleList.h
Tasks/: task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h
